# screamingcat

./: .gitignore  build.bat  check.bat  dev.bat  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crawler/: engine.rs  mod.rs  robots.rs  sitemap_parser.rs
src-tauri/src/integrations/: analytics.rs  google_auth.rs  mod.rs  pagespeed.rs  search_console.rs
src-tauri/src/parser/: html.rs
src-tauri/src/renderer/: mod.rs
src-tauri/src/storage/: db.rs  mod.rs  snapshots.rs
src/components/: CrawlComparisonDialog.tsx  CrawlHistoryPanel.tsx  DetailPanel.tsx  ErrorBoundary.tsx  IntegrationsPanel.tsx  IssuesPanel.tsx  ListModeDialog.tsx  MenuBar.tsx  ResultsTable.tsx  StatsBar.tsx  Toast.tsx  Toolbar.tsx  Visualizations.tsx
src/components/settings/: AdvancedTab.tsx  AuthenticationTab.tsx  CustomExtractionTab.tsx  CustomHeadersTab.tsx  CustomSearchTab.tsx  ExtractionTab.tsx  IntegrationsTab.tsx  LimitsTab.tsx  RenderingTab.tsx  RobotsTab.tsx  SettingsDialog.tsx  SettingsForm.tsx  SpeedTab.tsx  SpiderTab.tsx  StorageTab.tsx  UrlFiltersTab.tsx  UserAgentTab.tsx
src/components/visualizations/: HierarchyView.tsx  LinkGraph.tsx  SankeyDiagram.tsx  shared.tsx
src/hooks/: useCrawl.ts  useKeyboardShortcuts.ts
src/lib/: issueDetector.ts  linkGraph.ts  sitemapExporter.ts
src/types/: crawl.ts  integrations.ts  issues.ts
website-copy/: 01-homepage.md  02-features.md  03-pricing.md  04-how-it-works.md  05-download.md  06-comparison.md  07-about.md
